# my-mini-cc

./: .env.example  .gitignore  README.md  config.py  core.py  llm.py  main.py  model.py  pyproject.toml  requirements.txt  test_chat.py
agent/: __init__.py  agents.py  executor.py  subagent.py
managers/: __init__.py  skill.py  task.py
memory/: summary.py
skills/project-code-understanding/: SKILL.md  manifest.json
tools/: __init__.py  base.py  code_index.py  skill.py  task.py
utils/: debug_log.py  retry.py
